# preda-sdk

./: Cargo.toml  LICENSE-MIT  README.md  quickstart.sh
docs/: protocol.md
examples/: create_market.rs  place_position.rs  query_bsi.rs
src/: client.rs  error.rs  lib.rs
src/bsi/: aggregator.rs  calculator.rs  mod.rs  monitor.rs
src/market/: lifecycle.rs  mod.rs  settlement.rs
src/oracle/: consensus.rs  forecast.rs  mod.rs  narrative.rs  sentiment.rs
src/types/: belief.rs  market.rs  mod.rs  position.rs
